# Mobility-Scooter-Audio-Detection

./: README.md
transcriptions/: sample.vtt  sample_transcript.vtt
video_worker/: README.md  convert_wav.py  main.py  pyproject.toml  whisper_transcript.py
